--- a/WpfCustomApplication/ResourceDictionary.xaml
+++ b/WpfCustomApplication/ResourceDictionary.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-
   <!-- TaskContainer -->
   <Style x:Key="TaskContainer_ItemContainerStyle" TargetType="{x:Type ListBoxItem}">
     <Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -73,11 +72,8 @@
       </Setter.Value>
     </Setter>
   </Style>
-  
-  
-  <Style x:Key="ButtonStyle1" TargetType="{x:Type Button}">
 
-
+  <Style x:Key="ButtonGradient" TargetType="{x:Type Button}">
     <Setter Property="HorizontalContentAlignment" Value="Center"/>
     <Setter Property="VerticalContentAlignment" Value="Center"/>
     <Setter Property="Padding" Value="1"/>
@@ -120,7 +116,4 @@
     </Setter>
 
   </Style>
-  
-  
-  
 </ResourceDictionary>
